added more pages

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
    <div class='header'>
         <nav>
             <ul class='nav nav-pills pull-right'>
+                <li id="currentuser"></li>
                 <li role='presentation' class='active'><a href='#'>Home</a></li>
                 <li role='presentation'><a href='#'>Previous Results</a></li>
             </ul>
         </nav>
-        <h3 class='text-muted'>Project name</h3>
+        <h3 class='text-muted'>QuickPoll</h3>
+
     </div>
 
     <div class='jumbotron'>
         <h1 id="title"></h1>
-        <h1 id="status">Status: Disconnected from chat</h1>
-            <h1>QuickPoll</h1>
             <p class='lead'>Log in to your Twitch account to continue</p>
             <form class='form-inline'>
                 <div class='form-group'>
